--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "3.15.2",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
@@ -31,6 +30,7 @@
     "@vue/cli-service": "4.5.13",
     "@vue/eslint-config-typescript": "7.0.0",
     "@vue/test-utils": "1.2.2",
+    "core-js": "^3.22.0",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "6.2.2",
     "sass": "1.36.0",
