--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.1",
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
